added custom controls in the html and css style

--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <title>Slider</title>
 </head>
 <body>
-    <section class="wrapper">
-        <div class="slider-content">
-          <div class="slide"><img src="images/image-0.jpg"/></div>
-          <div class="slide"><img src="images/image-1.jpg"/></div>
-          <div class="slide"><img src="images/image-2.jpg"/></div>
-          <div class="slide"><img src="images/image-3.jpg"/></div>
-          <div class="slide"><img src="images/image-4.jpg"/></div>
-          <div class="slide"><img src="images/image-5.jpg"/></div>
-        </div>
-      </section>
+  <section class="container">
+    <div class="custom-controls">
+      <div class="custom-control"><img src="images/image-0.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-1.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-2.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-3.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-4.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-5.jpg" alt=""></div>
+    </div>
+    <div class="slider-wrapper">
+      <div class="slider-content">
+        <div class="slide"><img src="images/image-0.jpg"/></div>
+        <div class="slide"><img src="images/image-1.jpg"/></div>
+        <div class="slide"><img src="images/image-2.jpg"/></div>
+        <div class="slide"><img src="images/image-3.jpg"/></div>
+        <div class="slide"><img src="images/image-4.jpg"/></div>
+        <div class="slide"><img src="images/image-5.jpg"/></div>
+      </div>
+    </div>
+  </section>
 </body>
 <script src="script.js"></script> 
 </html>
