separated css files, optional and default, added media querys

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="optional.css" />
     <title>Slider</title>
 </head>
 <body>
-  <section class="container">
+  <section class="slider-container">
     <div class="custom-controls">
       <div class="custom-control"><img src="images/image-0.jpg" alt=""></div>
       <div class="custom-control"><img src="images/image-1.jpg" alt=""></div>
@@ -17,13 +18,15 @@
       <div class="custom-control"><img src="images/image-5.jpg" alt=""></div>
     </div>
     <div class="slider-wrapper">
-      <div class="slider-content">
-        <div class="slide"><img src="images/image-0.jpg"/></div>
-        <div class="slide"><img src="images/image-1.jpg"/></div>
-        <div class="slide"><img src="images/image-2.jpg"/></div>
-        <div class="slide"><img src="images/image-3.jpg"/></div>
-        <div class="slide"><img src="images/image-4.jpg"/></div>
-        <div class="slide"><img src="images/image-5.jpg"/></div>
+      <div class="slider">
+        <div class="slider-content">
+          <div class="slide"><img src="images/image-0.jpg"/></div>
+          <div class="slide"><img src="images/image-1.jpg"/></div>
+          <div class="slide"><img src="images/image-2.jpg"/></div>
+          <div class="slide"><img src="images/image-3.jpg"/></div>
+          <div class="slide"><img src="images/image-4.jpg"/></div>
+          <div class="slide"><img src="images/image-5.jpg"/></div>
+        </div>
       </div>
     </div>
   </section>
