--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
       <div class="custom-control"><img src="images/image-5.jpg" alt=""></div>
     </div>
     <div class="slider-wrapper">
-      <div class="slider-content">
-        <div class="slide"><img src="images/image-0.jpg"/></div>
-        <div class="slide"><img src="images/image-1.jpg"/></div>
-        <div class="slide"><img src="images/image-2.jpg"/></div>
-        <div class="slide"><img src="images/image-3.jpg"/></div>
-        <div class="slide"><img src="images/image-4.jpg"/></div>
-        <div class="slide"><img src="images/image-5.jpg"/></div>
+      <div class="slider">
+        <div class="slider-content">
+          <div class="slide"><img src="images/image-0.jpg"/></div>
+          <div class="slide"><img src="images/image-1.jpg"/></div>
+          <div class="slide"><img src="images/image-2.jpg"/></div>
+          <div class="slide"><img src="images/image-3.jpg"/></div>
+          <div class="slide"><img src="images/image-4.jpg"/></div>
+          <div class="slide"><img src="images/image-5.jpg"/></div>
+        </div>
       </div>
     </div>
   </section>
