--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="optional.css" />
     <title>Slider</title>
 </head>
 <body>
-  <section class="container">
+  <section class="slider-container">
     <div class="custom-controls">
       <div class="custom-control"><img src="images/image-0.jpg" alt=""></div>
       <div class="custom-control"><img src="images/image-1.jpg" alt=""></div>
