converted imgs fro jpg to webp

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
   <section class="slider-container">
     <div class="custom-controls">
-      <div class="custom-control"><img src="images/image-0.jpg" alt=""></div>
-      <div class="custom-control"><img src="images/image-1.jpg" alt=""></div>
-      <div class="custom-control"><img src="images/image-2.jpg" alt=""></div>
-      <div class="custom-control"><img src="images/image-3.jpg" alt=""></div>
-      <div class="custom-control"><img src="images/image-4.jpg" alt=""></div>
-      <div class="custom-control"><img src="images/image-5.jpg" alt=""></div>
+      <div class="custom-control"><img src="images/image-0.webp" alt=""></div>
+      <div class="custom-control"><img src="images/image-1.webp" alt=""></div>
+      <div class="custom-control"><img src="images/image-2.webp" alt=""></div>
+      <div class="custom-control"><img src="images/image-3.webp" alt=""></div>
+      <div class="custom-control"><img src="images/image-4.webp" alt=""></div>
+      <div class="custom-control"><img src="images/image-5.webp" alt=""></div>
     </div>
     <div class="slider-wrapper">
       <div class="slider">
         <div class="slider-content">
-          <div class="slide"><img src="images/image-0.jpg"/></div>
-          <div class="slide"><img src="images/image-1.jpg"/></div>
-          <div class="slide"><img src="images/image-2.jpg"/></div>
-          <div class="slide"><img src="images/image-3.jpg"/></div>
-          <div class="slide"><img src="images/image-4.jpg"/></div>
-          <div class="slide"><img src="images/image-5.jpg"/></div>
+          <div class="slide"><img src="images/image-0.webp"/></div>
+          <div class="slide"><img src="images/image-1.webp"/></div>
+          <div class="slide"><img src="images/image-2.webp"/></div>
+          <div class="slide"><img src="images/image-3.webp"/></div>
+          <div class="slide"><img src="images/image-4.webp"/></div>
+          <div class="slide"><img src="images/image-5.webp"/></div>
         </div>
       </div>
     </div>
